Full implemented firebase for team to show messages to users

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='recycle.css'>
-    <link rel='stylesheet' href='aboutUs.css'>
+    <link rel='stylesheet' href='lib/css/recycle.css'>
+    <link rel='stylesheet' href='lib/css/aboutUs.css'>
     <link rel="icon" href='/assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>About Us</title>
@@ -20,9 +22,9 @@
                 <a class="active" href="index.html"><strong><i class="fas fa-recycle"></i></strong></a>
                 <a href="howTo.html">How To</a>
                 <a href="news.html">News</a>
-        
+
                 <a href="recyclingCenters.html">Recycling Centers</a>
-        
+
                 <a href='aboutUs.html'>About Us</a>
             </div>
         </div>
@@ -32,9 +34,14 @@
         <div class='team-member'>
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, Front-End Developer, Communications Director</span></h4>
-                <p class="bio">CEO of RecycleNearMe. The mastermind behind the works of Everything. I decided to be apart of this team because recycling is important to me.
-                    I believe its the simplest way to preserve our earths resources and help the earth remain a beautiful place. I am currently in the Carl Sagon Engineering and Robotics Department at Forest Hills High School.
+                <h4><a href="https://richardbrobbeyasc20.github.io/" target="_blank"
+                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, Front-End Developer,
+                        Communications Director</span></h4>
+                <p>I decided to be
+                    apart of this team because recycling is important to me.
+                    I believe its the simplest way to preserve our earths resources and help the earth remain a
+                    beautiful place. I am currently in the Carl Sagon Engineering and Robotics Department at Forest
+                    Hills High School.
                 </p>
 
                 <div class='social-media-container'>
@@ -60,8 +67,13 @@
         <div class='team-member'>
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> <br><span>Lead Designer, Front-End Developer, Website Marketing and Financial Director </span></h4>
-                <p class="bio"> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York. Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site because I hope to revolutionize how the everyday person recycles. Most people think recycling and think plastic and paper, but recycling is much more than that, and I aim to open their eyes to that.
+                <h4><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
+                        Cherisma</a> <br><span>Lead Designer, Front-End Developer, Website Marketing and Financial
+                        Director </span></h4>
+                <p> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York.
+                    Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site
+                    because I hope to revolutionize how the everyday person recycles. Most people think recycling and
+                    think plastic and paper, but recycling is much more than that, and I aim to open their eyes to that.
                 </p>
 
                 <div class='social-media-container'>
@@ -87,8 +99,13 @@
         <div class='team-member'>
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
-                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> <br><span>Project Lead, Backend Devloper, QA Tester</span></h4>
-                <p class="bio"> My name is Deyby Antony Rodriguez and currently, I am a high school senior living in New York. Technology, well to be more specific, Computer Science, has been an interest for quite some time now. I aspire to one day become a web developer, in Front-End, Back-End, or Full-Stack development. Aside from technology, I love the winter, New York City, and I am also interested in business and finance.
+                <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby
+                        Rodriguez</a> <br><span>Project Lead, Backend Devloper, QA Tester</span></h4>
+                <p> My name is Deyby Antony Rodriguez and currently, I am a high school senior living in New
+                    York. Technology, well to be more specific, Computer Science, has been an interest for quite some
+                    time now. I aspire to one day become a web developer, in Front-End, Back-End, or Full-Stack
+                    development. Aside from technology, I love the winter, New York City, and I am also interested in
+                    business and finance.
                 </p>
 
                 <div class='social-media-container'>
@@ -111,11 +128,12 @@
             </div>
         </div>
 
-        <div id='zahvier' class='team-member zahvier'>
+        <div id='zahvier' class='team-member zahvier' style='display:none'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
-                <h4 class=nl>Zahvier Walter <br><span>UX Designer</span></h4>
-                <p class="bio">I'm Zahvier Walter I'm one of the designers. I hope that this website can be use to make New York City a more environment friendly place.
+                <h4>Zahvier Walter <br><span>UX Designer</span></h4>
+                <p>I'm Zahvier Walter I'm one of the designers. I hope that this website can be use to make
+                    New York City a more environment friendly place.
                 </p>
 
                 <div class='social-media-container'>
@@ -143,8 +161,8 @@
         <p>
             <a href="https://deybyr647.com/" target="_blank">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank">Richard Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> 
-            <a class='zahvier' id='inactive'>Zahvier Walter</a> 
+            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a>
+            <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
     </div>
