--- a/news.html
+++ b/news.html
@@ -5,11 +5,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='recycle.css'>
-    <link rel='stylesheet' href='news.css'>
+    <link rel='stylesheet' href='lib/css/recycle.css'>
+    <link rel='stylesheet' href='lib/css/news.css'>
     <link rel="icon" href='/assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script defer src='news.js'></script>
+    <script defer src='lib/js/news.js'></script>
     <title>Articles</title>
 </head>
 
