--- a/recyclingCenters.html
+++ b/recyclingCenters.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='recycle.css'>
-    <link rel='stylesheet' href='recyclingCenters.css'>
+    <link rel='stylesheet' href='lib/css/recycle.css'>
+    <link rel='stylesheet' href='lib/css/recyclingCenters.css'>
     <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlTjLdKgz2WmDEFZBqabdsQq5xPevC8dc&callback=initMap&libraries=&v=weekly" defer></script>
-    <script defer src='recyclingCenters.js'></script>
+    <script defer src='lib/js/recyclingCenters.js'></script>
 
     <title>Recycling Centers</title>
 </head>
