--- a/index.html
+++ b/index.html
@@ -13,8 +13,34 @@
     <meta name='robots' content='index, follow'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyD5TYxI5yg7zRiJKWGyqm7P3a7ubq2ngUg",
+            authDomain: "recyclenear-me.firebaseapp.com",
+            databaseURL: "https://recyclenear-me.firebaseio.com",
+            projectId: "recyclenear-me",
+            storageBucket: "recyclenear-me.appspot.com",
+            messagingSenderId: "885776079469",
+            appId: "1:885776079469:web:3c2d562ff01098bfbffd64",
+            measurementId: "G-MJ0TQ0MBFY"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
+
     <link rel='stylesheet' href='lib/css/recycle.css'>
     <link rel='stylesheet' href='lib/css/index.css'>
+    <link rel='stylesheet' href='lib/css/howTo.css'>
     <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script defer src='lib/js/index.js'></script>
@@ -47,6 +73,10 @@
 
     <div class='articles-container'>
         <h3>Featured News</h3>
+    </div>
+
+    <div class='teamMessages' style="margin-top: 50px; text-align: center">
+        <h3>Recommendations & Messages From Our Team</h3>
     </div>
 
     <div class="footer">
