--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://richardbrobbeyasc20.github.io/" target="_blank"
-                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, Front-End Developer,
+                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, UI/UX Designer,
                         Communications Director</span></h4>
                 <p>I decided to be
                     apart of this team because recycling is important to me.
@@ -68,7 +68,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
-                        Cherisma</a> <br><span>Lead Designer, Front-End Developer, Website Marketing and Financial
+                        Cherisma</a> <br><span>Lead Designer, UI/UX Designer, Website Marketing and Financial
                         Director </span></h4>
                 <p> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York.
                     Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site
@@ -128,12 +128,12 @@
             </div>
         </div>
 
-        <div id='zahvier' class='team-member zahvier' style='display:none'>
+        <div id='zahvier' class='team-member zahvier'>
             <img src='assets/image.png' alt='testArticleImage'>
             <div>
-                <h4>Zahvier Walter <br><span>UX Designer</span></h4>
+                <h4>Zahvier Walter <br><span>UI/UX Designer</span></h4>
                 <p>I'm Zahvier Walter I'm one of the designers. I hope that this website can be use to make
-                    New York City a more environment friendly place.
+                    New York City a more environment friendly place. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam provident alias architecto vitae! Quae, similique. 
                 </p>
 
                 <div class='social-media-container'>
@@ -161,7 +161,7 @@
         <p>
             <a href="https://deybyr647.com/" target="_blank">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank">Richard Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a>
+            <a href="https://elijahasc.github.io/" target="_blank">Elijah Cherisma</a> |
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
