--- a/howTo.html
+++ b/howTo.html
@@ -72,7 +72,7 @@
             <a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
             <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
                 Brobbey</a> |
-            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a>
+            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah Cherisma</a> |
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
