--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <a class=pw href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
                 Brobbey</a> |
             <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
-                Cherisma</a>
+                Cherisma</a> |
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
         <p>Copyright 2020 © RecycleNearMe | All rights reserved</p>
