--- a/howTo.html
+++ b/howTo.html
@@ -54,7 +54,7 @@
             <a href="howTo.html">How To</a>
             <a href="news.html">News</a>
             <a href="recyclingCenters.html">Recycling Centers</a>
-            <a href='aboutUs.html'>About Us</a>
+            <a href='aboutUs.html'>Meet The Team</a>
         </div>
     </div>
 
