--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="recyclingCenters.html">Recycling Centers</a>
 
 
-            <a href='aboutUs.html'>About Us</a>
+            <a href='aboutUs.html'>Meet The Team</a>
         </div>
     </div>
 
