--- a/aboutUs.html
+++ b/aboutUs.html
@@ -25,7 +25,7 @@
 
                 <a href="recyclingCenters.html">Recycling Centers</a>
 
-                <a href='aboutUs.html'>About Us</a>
+                <a href='aboutUs.html'>Meet The Team</a>
             </div>
         </div>
     </div>
