--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://richardbrobbeyasc20.github.io/" target="_blank"
-                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>Designer, UI/UX Designer,
+                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>UI/UX Designer,
                         Communications Director</span></h4>
                 <p>I decided to be
                     apart of this team because recycling is important to me.
@@ -68,7 +68,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
-                        Cherisma</a> <br><span>Lead Designer, UI/UX Designer, Website Marketing and Financial
+                        Cherisma</a> <br><span>Lead UI/UX Designer, Website Marketing and Financial
                         Director </span></h4>
                 <p> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York.
                     Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site
