--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,8 +68,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
-                        Cherisma</a> <br><span>Lead UI/UX Designer, Website Marketing and Financial
-                        Director </span></h4>
+                        Cherisma</a> <br><span>Lead UI/UX Designer, Full-Stack Devloper </span></h4>
                 <p> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York.
                     Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site
                     because I hope to revolutionize how the everyday person recycles. Most people think recycling and
