Made some styling edits, got rid of unneeded logging, and improved internal message page

--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
         <h3>Featured News</h3>
     </div>
 
-    <div class='teamMessages' style="margin-top: 50px; text-align: center">
+    <div class='teamMessages'>
         <h3>Recommendations & Messages From Our Team</h3>
     </div>
 
     <div class="footer">
         <p>Creators</p>
         <p>
-            <a class=pw href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
-            <a class=pw href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
+            <a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby Rodriguez</a> |
+            <a href="https://richardbrobbeyasc20.github.io/" target="_blank" rel="noopener noreferrer">Richard
                 Brobbey</a> |
-            <a class=pw href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
+            <a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
                 Cherisma</a> |
             <a class='zahvier' id='inactive'>Zahvier Walter</a>
         </p>
