--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Lemonada&family=Oswald:wght@300&family=Red+Rose&family=Roboto:ital,wght@1,300&family=Rowdies:wght@300&display=swap"
         rel="stylesheet">
-    <title>Recycling 101</title>
+    <title>RecycleNearMe</title>
     <meta name='description'
         content="Learn about ecology and the benefits that are brought on the environment as a result of recycling. Find nearby recycling centers now!">
     <meta name='keywords' content='Recycle, e-waste, global warming, recycling center, green new deal, ecology'>
