--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
     <link rel="icon" href='/assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script defer src='lib/js/news.js'></script>
-    <title>Articles</title>
+    <title>News</title>
 </head>
 
 <body>
