--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='lib/css/recycle.css'>
     <link rel='stylesheet' href='lib/css/aboutUs.css'>
-    <link rel="icon" href='/assets/favicon.png'>
+    <link rel="icon" href='assets/favicon.png'>
     <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>About Us</title>
 </head>
@@ -132,7 +132,7 @@
             <div>
                 <h4>Zahvier Walter <br><span>UI/UX Designer</span></h4>
                 <p>I'm Zahvier Walter I'm one of the designers. I hope that this website can be use to make
-                    New York City a more environment friendly place. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam provident alias architecto vitae! Quae, similique. 
+                    New York City a more environment friendly place. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam provident alias architecto vitae! Quae, similique.
                 </p>
 
                 <div class='social-media-container'>
