--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@
             <img src='assets/team images/richard.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://richardbrobbeyasc20.github.io/" target="_blank"
-                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>UI/UX Designer,
+                        rel="noopener noreferrer">Richard Brobbey</a> <br><span>Front-End Developer, UI/UX Designer,
                         Communications Director</span></h4>
                 <p>I decided to be
                     apart of this team because recycling is important to me.
@@ -68,7 +68,7 @@
             <img src='assets/team images/elijah.jpg' alt='testArticleImage'>
             <div>
                 <h4><a href="https://elijahasc.github.io/" target="_blank" rel="noopener noreferrer">Elijah
-                        Cherisma</a> <br><span>Lead UI/UX Designer, Full-Stack Devloper </span></h4>
+                        Cherisma</a> <br><span>Lead UI/UX Designer, Front-End Developer</span></h4>
                 <p> I’m Elijah Cherisma, I’m a Haitian American teen who lives in Brooklyn, New York.
                     Currently, I attend Medgar Evers College Preparatory School in Brooklyn. I helped create this site
                     because I hope to revolutionize how the everyday person recycles. Most people think recycling and
@@ -99,7 +99,7 @@
             <img src='assets/team images/deyby.jpg' alt='testArticleImage'>
             <div>
                 <h4 class=nl><a href="https://deybyr647.com/" target="_blank" rel="noopener noreferrer">Deyby
-                        Rodriguez</a> <br><span>Project Lead, Backend Devloper, QA Tester</span></h4>
+                        Rodriguez</a> <br><span>Project Lead, Full-Stack Developer, QA Director</span></h4>
                 <p> My name is Deyby Antony Rodriguez and currently, I am a high school senior living in New
                     York. Technology, well to be more specific, Computer Science, has been an interest for quite some
                     time now. I aspire to one day become a web developer, in Front-End, Back-End, or Full-Stack
